# co-helper

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ANTI_DETECTION.md  IMPLEMENTATION_PLAN.md  brainstorm-synthesis.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  resample.rs  vad.rs
src-tauri/src/llm/: mod.rs  router_client.rs
src-tauri/src/stt/: whisper.rs
src/components/: ChatWindow.tsx  MessageBubble.tsx  SourceSelector.tsx  VadIndicator.tsx
src/store/: chat.ts
