[package]
name = "co-helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "co_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
toml = "0.8"
directories = "5"
uuid = { version = "1", features = ["v4"] }

# Audio (M2+)
cpal = "0.15"
rubato = "0.16"
voice_activity_detector = "0.2"
# ort pinned by voice_activity_detector 0.2 (=2.0.0-rc.10); rc.12 breaks ureq TLS
ort = "2.0.0-rc.10"

# STT (M4+) — whisper-rs, feature-gated so non-STT builds need no libclang
whisper-rs = { version = "0.14", optional = true }

[features]
default = []
# In-process whisper.cpp STT. Needs libclang-dev to build whisper-rs-sys.
stt = ["dep:whisper-rs"]
# GPU accel for whisper — pulls in stt + whisper-rs backend feature.
cuda = ["stt", "whisper-rs/cuda"]
metal = ["stt", "whisper-rs/metal"]